Fix: Not correctly centered Filter On Small Screens

--- a/src/style/components/_filterCars.scss
+++ b/src/style/components/_filterCars.scss
@@ -15,6 +15,7 @@
     display: flex;
     position: absolute;
     z-index: 1;
+    left: 15px;
     max-width: -webkit-fill-available;
   }
 
